# CampusAR

./: .coderabbit.yaml  .gitignore  AGENTS.md  ARCHITECTURE_PLAN.md  BACKEND_API_PLAN.md  BACKLOG.md  CODEX_HANDOFF.md  CONTRIBUTING.md  CampusAR_SRS_MVP.md  CampusAR_SRS_v1.0.docx  ONBOARDING_UX_PLAN.md  PHASE1_BACKEND_DATA_ADMIN_PLAN.md  PHASE1_MOBILE_NATIVE_PLAN.md  PHASE2_BACKEND_DATA_SUPPORT_PLAN.md  PHASE2_MOBILE_NATIVE_PLAN.md  PHASED_ROADMAP.md  PROJECT_BRIEF.md  README.md  TASKS.md  commit.ps1
.github/: PULL_REQUEST_TEMPLATE.md
admin/: index.html  package-lock.json  package.json
admin-dashboard/: README.md  VISUAL_DIRECTION.md  app.js  index.html  package-lock.json  package.json  styles.css
android-app/: README.md  gradle.properties  settings.gradle.kts
app/: index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
backend/: .env.example  API_CONTRACT.md  DEPLOYMENT_PLAN.md  EMAIL_PROVIDER_OPTIONS.md  MAP_SYNC_CONTRACT.md  README.md  STACK_DECISION.md  drizzle.config.ts  package-lock.json  package.json  tsconfig.json
database/: README.md  SCHEMA_NOTES.md
native-engine/: Cargo.toml  README.md
native-engine/scripts/: build-android.ps1
native-engine/src/: lib.rs
native-engine/src/ffi/: mod.rs
native-engine/src/navigation/: bearing.rs  graph.rs  mod.rs  pathfinding.rs
native-engine/src/sensors/: barometer.rs  ekf.rs  heading.rs  magnetic.rs  mod.rs  motion.rs  pdr.rs  position.rs  sampling.rs  wifi_rssi.rs
native-engine/src/utils/: math.rs
scripts/: use-android-toolchain.ps1
shared/: constants.ts  tsconfig.json  (+1 more)
(+134 files in other folders)
